Dev fixes for splash screen and styles. In process of the app logo and icons. Next will be the content of the app

--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:background="@color/holo_blue_dark"
+        android:background="@drawable/primary_button"
         android:padding="12dp"
         android:text="@string/sign_in"
         android:textColor="@android:color/white"
