--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:background="@color/holo_blue_dark"
+        android:background="@drawable/primary_button"
         android:padding="12dp"
         android:text="@string/sign_in"
         android:textColor="@android:color/white"
@@ -67,7 +67,8 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_email_create_account"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/btn_email_create_account"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
+        tools:targetApi="lollipop"/>
 
     <TextView
         android:id="@+id/btn_email_create_account"
